# Synked

./: LICENSE  README.md  config.json
Desktop/: CMakeLists.txt  README.md  app.cpp  app.h
Desktop/SnykedDesktop/: package.json
Desktop/SnykedDesktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/SnykedDesktop/src/app/: App.tsx
Desktop/SnykedDesktop/src/components/file-display/: file-display.scss  file-display.tsx
Desktop/SnykedDesktop/src/components/file-list/: file-list.scss  file-list.tsx
Mobile/: .gitignore  Mobile.hxproj  build.hxml  project.xml
Mobile/Source/: Main.hx  TextBox.hx
Mobile/SynkedAndroid/: settings.gradle.kts
Mobile/SynkedAndroid/app/: build.gradle.kts
Mobile/SynkedAndroid/app/src/main/: AndroidManifest.xml
Mobile/SynkedAndroid/app/src/main/res/values-night/: themes.xml
SnykedDesktop/: package-lock.json
SnykedDesktop/src-tauri/src/: main.rs
SnykedDesktop/src/app/: App.tsx
SnykedDesktop/src/components/file-display/: file-display.tsx
SnykedDesktop/src/components/file-list/: file-list.tsx
SnykedDesktop/src/types/: file-info.ts  shared-file-list.ts
SynkedAndroid/app/src/main/res/layout/: file_info_row_item.xml
SynkedAndroid/gradle/wrapper/: gradle-wrapper.properties
SynkedService/: .gitignore  Cargo.toml
SynkedService/synked-service/: Cargo.toml
SynkedService/synked-service-data/: Cargo.toml
SynkedService/synked-service-data/src/: config.rs  file_info.rs  lib.rs  shared_file_list.rs
SynkedService/synked-service/src/: main.rs
synked-service/: Cargo.toml
(+9 files in other folders)
